--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "svix": "^1.23.0"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
